--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 
     <div id="app-container" class="w-full max-w-4xl mx-auto p-4 sm:p-6 md:p-8">
 
-        <!-- User Info Screen -->
         <div id="start-screen" class="bg-white p-8 rounded-2xl shadow-lg text-center">
             <h1 class="text-3xl sm:text-4xl font-bold text-gray-800 mb-2">Media & Information Literacy Quiz</h1>
             <p class="text-gray-600 mb-6">Please enter your details to begin the quiz.</p>
@@ -42,7 +41,6 @@
              <p class="text-sm text-red-500 mt-6 font-semibold">Important: Please do not switch tabs or windows while taking the quiz. Doing so will be recorded.</p>
         </div>
 
-        <!-- Quiz Screen -->
         <div id="quiz-screen" class="hidden">
             <div class="bg-white p-6 sm:p-8 rounded-2xl shadow-lg">
                 <div class="flex justify-between items-center mb-6">
@@ -53,8 +51,7 @@
                 </div>
                 <p id="question-text" class="text-lg text-gray-700 mb-6 min-h-[60px]"></p>
                 <div id="options-container" class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                    <!-- Options will be injected here -->
-                </div>
+                    </div>
                 <div class="mt-8 flex justify-between items-center">
                     <button id="prev-btn" class="bg-gray-300 text-gray-800 font-bold py-2 px-6 rounded-lg hover:bg-gray-400 transition-colors duration-300">Previous</button>
                     <button id="next-btn" class="bg-blue-600 text-white font-bold py-2 px-6 rounded-lg hover:bg-blue-700 transition-colors duration-300 shadow-md">Next</button>
@@ -63,14 +60,13 @@
             </div>
         </div>
 
-        <!-- Result Screen -->
         <div id="result-screen" class="hidden">
             <div class="bg-white p-8 rounded-2xl shadow-lg text-center">
                 <h1 class="text-3xl sm:text-4xl font-bold text-blue-600 mb-4">Quiz Completed!</h1>
                 <p class="text-gray-700 text-lg mb-2"><strong>Name:</strong> <span id="result-name"></span></p>
                 <p class="text-gray-700 text-lg mb-2"><strong>Section:</strong> <span id="result-section"></span></p>
-                <p class="text-gray-700 text-lg mb-6"><strong>Time Taken:</strong> <span id="time-taken"></span></p>
-                <div class="bg-blue-50 border-l-4 border-blue-500 p-6 rounded-lg mb-6">
+                <p class="text-gray-700 text-lg mb-2"><strong>Time Taken:</strong> <span id="time-taken"></span></p>
+                <p class="text-gray-700 text-lg mb-6"><strong>Completed On:</strong> <span id="completion-time"></span></p> <div class="bg-blue-50 border-l-4 border-blue-500 p-6 rounded-lg mb-6">
                     <p class="text-xl text-gray-800">Your Score:</p>
                     <p class="text-5xl font-extrabold text-blue-700 my-2"><span id="final-score"></span> / <span id="total-score"></span></p>
                 </div>
@@ -80,14 +76,13 @@
             </div>
         </div>
 
-        <!-- Already Taken Screen -->
         <div id="already-taken-screen" class="hidden bg-white p-8 rounded-2xl shadow-lg text-center">
             <h1 class="text-3xl sm:text-4xl font-bold text-gray-800 mb-4">Quiz Already Completed</h1>
             <p class="text-gray-600 mb-6">You have already taken this quiz. Here are your results:</p>
             <p class="text-gray-700 text-lg mb-2"><strong>Name:</strong> <span id="stored-result-name"></span></p>
             <p class="text-gray-700 text-lg mb-2"><strong>Section:</strong> <span id="stored-result-section"></span></p>
-            <p class="text-gray-700 text-lg mb-6"><strong>Time Taken:</strong> <span id="stored-time-taken"></span></p>
-            <div class="bg-blue-50 border-l-4 border-blue-500 p-6 rounded-lg mb-6">
+            <p class="text-gray-700 text-lg mb-2"><strong>Time Taken:</strong> <span id="stored-time-taken"></span></p>
+            <p class="text-gray-700 text-lg mb-6"><strong>Completed On:</strong> <span id="stored-completion-time"></span></p> <div class="bg-blue-50 border-l-4 border-blue-500 p-6 rounded-lg mb-6">
                 <p class="text-xl text-gray-800">Your Score:</p>
                 <p class="text-5xl font-extrabold text-blue-700 my-2"><span id="stored-final-score"></span> / <span id="stored-total-score"></span></p>
             </div>
@@ -287,6 +282,7 @@
                     document.getElementById('stored-result-name').textContent = results.fullname;
                     document.getElementById('stored-result-section').textContent = results.section;
                     document.getElementById('stored-time-taken').textContent = results.timeTaken;
+                    document.getElementById('stored-completion-time').textContent = results.completionTime; // Updated this
                     document.getElementById('stored-final-score').textContent = results.score;
                     document.getElementById('stored-total-score').textContent = results.totalScore;
                     document.getElementById('stored-result-tab-switches').textContent = results.tabSwitches;
@@ -296,7 +292,7 @@
 
         // Event listener for tab switching
         document.addEventListener('visibilitychange', () => {
-            if (document.hidden && quizScreen.style.display !== 'hidden') {
+            if (document.hidden && !quizScreen.classList.contains('hidden')) {
                 tabSwitchCounter++;
                 tabSwitchCountEl.textContent = tabSwitchCounter;
                 tabSwitchAlertEl.classList.remove('hidden');
@@ -397,10 +393,20 @@
             const seconds = timeDiff % 60;
             const formattedTime = `${minutes}m ${seconds}s`;
             const totalScore = quizData.length * 2;
+            
+            // Format completion timestamp
+            const completionTimestamp = endTime.toLocaleString('en-US', { 
+                year: 'numeric', 
+                month: 'long', 
+                day: 'numeric', 
+                hour: '2-digit', 
+                minute: '2-digit' 
+            });
 
             document.getElementById('result-name').textContent = userInfo.fullname;
             document.getElementById('result-section').textContent = userInfo.section;
             document.getElementById('time-taken').textContent = formattedTime;
+            document.getElementById('completion-time').textContent = completionTimestamp; // Updated this
             document.getElementById('final-score').textContent = score;
             document.getElementById('total-score').textContent = totalScore;
             document.getElementById('result-tab-switches').textContent = tabSwitchCounter;
@@ -410,6 +416,7 @@
                 fullname: userInfo.fullname,
                 section: userInfo.section,
                 timeTaken: formattedTime,
+                completionTime: completionTimestamp, // Added this to storage
                 score: score,
                 totalScore: totalScore,
                 tabSwitches: tabSwitchCounter
@@ -424,4 +431,3 @@
     </script>
 </body>
 </html>
-
